--- a/index.html
+++ b/index.html
@@ -4,7 +4,91 @@
 <body>
   <h1>RYANS CHEAT SHEET</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h2 id='html'>HTML</h2>
+    <h3></h3>
+    <table>
+      <tr>
+        <th>Selector</th>
+        <th>Defintion</th>
+      </tr>
+      <tr>
+        <td>&lt;!DOCTYPE html&gt;</td>
+        <td>Start every html file with this so the system knows how to read the code</td>
+      </tr>
+      <tr>
+        <td>&lt;body&gt;</td>
+      </tr>
+      <tr>
+        <td>&lt;p&gt;</td>
+      </tr>
+      <tr>
+        <td>&lt;footer&gt;</td>
+      </tr>
+      <tr>
+        <td>&lt;span&gt;</td>
+      </tr>
+    </table>
+  <h2 id='styled'>CSS</h2>
+    <h3>Sizing</h3>
+      <table>
+       <tr>
+        <th>Selector</th>
+        <th>Defintion</th>
+      </tr>
+      </tr>
+      <tr>
+        <td>height</td>
+      </tr>
+      <tr>
+        <td>width</td>
+      </tr>
+      <tr>
+        <td>/td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+      </table>
+    <h3>Alignment</h3>
+      <table>
+        <tr>
+        <th>Selector</th>
+        <th>Defintion</th>
+      </tr>
+      </tr>
+      <tr>
+        <td>justify</td>
+      </tr>
+      <tr>
+        <td>center</td>
+      </tr>
+      <tr>
+        <td>left, right</td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+          
+    <h3>Fonts</h3>
+      <table>
+        <tr>
+        <th>Selector</th>
+        <th>Defintion</th>
+      </tr>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+      </table>
 </body>
  
 </html>
