--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
- 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./resources/css/index.css">
+    <title>RYAN CHEAT SHEET</title>
+</head>
 <body>
-  <h1>RYANS CHEAT SHEET</h1>
+    <h1>RYANS CHEAT SHEET</h1>
   <p>Welcome to my website!</p>
-  <h2 id='html'>HTML</h2>
+  <h2>HTML</h2>
     <h3></h3>
     <table>
       <tr>
@@ -17,78 +23,21 @@
       </tr>
       <tr>
         <td>&lt;body&gt;</td>
+        <td>Where the main content resides for your HTML</td>
       </tr>
       <tr>
         <td>&lt;p&gt;</td>
+        <td>Paragraph / The description of your content</td>
       </tr>
       <tr>
         <td>&lt;footer&gt;</td>
+        <td>The bottom navigation</td>
       </tr>
       <tr>
         <td>&lt;span&gt;</td>
+        <td>Unique heading that will ignore certain style CSS</td>
       </tr>
     </table>
-  <h2 id='styled'>CSS</h2>
-    <h3>Sizing</h3>
-      <table>
-       <tr>
-        <th>Selector</th>
-        <th>Defintion</th>
-      </tr>
-      </tr>
-      <tr>
-        <td>height</td>
-      </tr>
-      <tr>
-        <td>width</td>
-      </tr>
-      <tr>
-        <td>/td>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-      </table>
-    <h3>Alignment</h3>
-      <table>
-        <tr>
-        <th>Selector</th>
-        <th>Defintion</th>
-      </tr>
-      </tr>
-      <tr>
-        <td>justify</td>
-      </tr>
-      <tr>
-        <td>center</td>
-      </tr>
-      <tr>
-        <td>left, right</td>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-          
-    <h3>Fonts</h3>
-      <table>
-        <tr>
-        <th>Selector</th>
-        <th>Defintion</th>
-      </tr>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-      </table>
+    
 </body>
- 
 </html>
