--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>RYAN CHEAT SHEET</title>
 </head>
 <body>
-    <h1>RYANS CHEAT SHEET</h1>
+    <h1 id='banner'>RYANS CHEAT SHEET</h1>
   <p>Welcome to my website!</p>
   <h2>HTML</h2>
     <h3></h3>
