--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
     <title>RYAN'S CHEAT SHEET</title>
 </head>
 <body>
