--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <style>
-table, th, td {
-  border: 1px solid black;
+      table, th, td {
+      border: 1px solid black;
 }
 </style>
-    <title>RYAN'S CHEAT SHEET</title>
+    <title>RYANS CHEAT SHEET</title>
 </head>
 <body>
     <h1 id='banner'>RYANS CHEAT SHEET</h1>
-  <p>Welcome to my website!</p>
+  <p><span class='welcome'>Welcome to my website!</span></p>
   <h2>HTML</h2>
-    <h3></h3>
-    <table>
+    <table class="table-background">
       <tr>
         <th>Selector</th>
         <th>Defintion</th>
@@ -42,6 +41,20 @@ table, th, td {
         <td>&lt;span&gt;</td>
         <td>Unique heading that will ignore certain style CSS</td>
       </tr>
+    </table>
+  <h2>CSS</h2>
+    <table>
+      <tr>
+        <th>Selector</th>
+        <th>Defintion</th>
+      </tr>
+      <tr>
+        <td>font-size</td>
+        <td>Adjusts the size of the font</td>
+      </tr>
+      <tr>
+          <td>max-height</td>
+          <td>Defines the maximum height of an element.</td>
     </table>
     
 </body>
